k8s/app/redis-insight-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-insight
  namespace: app
  labels:
    app: redis-insight
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-insight
  template:
    metadata:
      labels:
        app: redis-insight
    spec:
      containers:
        - name: redis-insight
          image: redis/redisinsight:latest
          ports:
            - containerPort: 5540
          volumeMounts:
            - name: redis-insight-data
              mountPath: /data
      volumes:
        - name: redis-insight-data
          emptyDir: {}
